--- a/public/css/client/readingFooterNavigation.css
+++ b/public/css/client/readingFooterNavigation.css
@@ -8,7 +8,7 @@
     top: 0px;
     width: 300px;
     height: 100%;
-    color: #e1ffff;
+    /*color: #e1ffff;*/
 }
 .nav-side-menu .brand {
     background-color: #23282e;
