--- a/public/css/client/readingFooterNavigation.css
+++ b/public/css/client/readingFooterNavigation.css
@@ -1,145 +1,115 @@
-.nav-side-menu {
+.nav-left-menu {
     overflow: auto;
-    font-family: verdana;
     font-size: 12px;
     font-weight: 200;
-    background-color: #2e353d;
+    background: #0b161d;
     position: fixed;
-    top: 0px;
-    width: 300px;
-    height: 100%;
+    top: 0;
+    left: -500px;
+    width: 500px;
+    height: calc(100vh - 50px);
     color: #e1ffff;
+    z-index: 9999;
 }
-.nav-side-menu .brand {
-    background-color: #23282e;
-    line-height: 50px;
-    display: block;
-    text-align: center;
-    font-size: 14px;
+.transform-left-custom-active {
+    left: 0;
 }
-.nav-side-menu .toggle-btn {
-    display: none;
-}
-.nav-side-menu ul,
-.nav-side-menu li {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-    line-height: 35px;
-    cursor: pointer;
-    /*
-      .collapsed{
-         .arrow:before{
-                   font-family: FontAwesome;
-                   content: "\f053";
-                   display: inline-block;
-                   padding-left:10px;
-                   padding-right: 10px;
-                   vertical-align: middle;
-                   float:right;
-              }
-       }
-  */
-}
-.nav-side-menu ul :not(collapsed) .arrow:before,
-.nav-side-menu li :not(collapsed) .arrow:before {
-    font-family: FontAwesome;
-    content: "\f078";
-    display: inline-block;
-    padding-left: 10px;
-    padding-right: 10px;
-    vertical-align: middle;
-    float: right;
-}
-.nav-side-menu ul .active,
-.nav-side-menu li .active {
-    border-left: 3px solid #d19b3d;
-    background-color: #4f5b69;
-}
-.nav-side-menu ul .sub-menu li.active,
-.nav-side-menu li .sub-menu li.active {
-    color: #d19b3d;
-}
-.nav-side-menu ul .sub-menu li.active a,
-.nav-side-menu li .sub-menu li.active a {
-    color: #d19b3d;
-}
-.nav-side-menu ul .sub-menu li,
-.nav-side-menu li .sub-menu li {
-    background-color: #181c20;
-    border: none;
-    line-height: 28px;
-    border-bottom: 1px solid #23282e;
-    margin-left: 0px;
-}
-.nav-side-menu ul .sub-menu li:hover,
-.nav-side-menu li .sub-menu li:hover {
-    background-color: #020203;
-}
-.nav-side-menu ul .sub-menu li:before,
-.nav-side-menu li .sub-menu li:before {
-    font-family: FontAwesome;
-    content: "\f105";
-    display: inline-block;
-    padding-left: 10px;
-    padding-right: 10px;
-    vertical-align: middle;
-}
-.nav-side-menu li {
-    padding-left: 0px;
-    border-left: 3px solid #2e353d;
-    border-bottom: 1px solid #23282e;
-}
-.nav-side-menu li a {
-    text-decoration: none;
-    color: #e1ffff;
-}
-.nav-side-menu li a i {
-    padding-left: 10px;
-    width: 20px;
-    padding-right: 20px;
-}
-.nav-side-menu li:hover {
-    border-left: 3px solid #d19b3d;
-    background-color: #4f5b69;
+
+.transform-left-custom {
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
     transition: all 1s ease;
 }
-@media (max-width: 767px) {
-    .nav-side-menu {
-        position: relative;
-        width: 100%;
-        margin-bottom: 10px;
-    }
-    .nav-side-menu .toggle-btn {
-        display: block;
-        cursor: pointer;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        z-index: 10 !important;
-        padding: 3px;
-        background-color: #ffffff;
-        color: #000;
-        width: 40px;
-        text-align: center;
-    }
-    .brand {
-        text-align: left !important;
-        font-size: 22px;
-        padding-left: 20px;
-        line-height: 50px !important;
-    }
+
+.header-left-menu {
+    padding: 20px;
 }
-@media (min-width: 767px) {
-    .nav-side-menu .menu-list .menu-content {
-        display: block;
-    }
+.level-lesson-current {
+    display: inline-block;
 }
-body {
-    margin: 0px;
-    padding: 0px;
+
+.list-level-lesson {
+    display: inline-block;
+    margin-left: 15px;
+    bottom: 5px;
+}
+.top-menu {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.icon-inner-custom {
+    color: black;
+    font-size: 23px
+}
+.icon-inner-custom.icon-hide {
+    left: 2px;
+}
+.icon-show {
+    display: none;
+}
+
+.list-level-lesson.show span .icon-show {
+    display: inline-block;
+}
+
+.list-level-lesson.show span .icon-hide {
+    display: none;
+}
+
+.type-current .current-step a{
+    background: #152B39;
+}
+#menu-content .type-current li.current-step {
+    color: #f3bc65;
+}
+
+#menu-content li {
+    color: white;
+    font-size: 16px;
+    word-wrap: normal;
+    white-space: nowrap;
+    text-decoration: none;
+    padding: 5px 0;
+}
+#menu-content .level-one, .level-two {
+    list-style: none;
+}
+#menu-content {
+    margin: 0;
+    padding: 10px 40px;
+    border-top: 1px solid #152B39;
+}
+
+.title-menu {
+    color: #52B1DB;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.icon-head-title-custom {
+    margin-right: 3px;
+    width: 15px;
+}
+
+.show-current-step {
+    background: #0b161d;
+    float: left;
+    height: 100%;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.title-step {
+    margin-left: 10px;
+}
+
+#menu-content li a {
+    padding: 5px 8px;
+}
+
+.list-level-lesson .dropdown-header {
+    color: #8a6d3b;
 }
