--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -139,19 +139,6 @@ header#header .header-top {
     padding-top: 30px;
 }
 
-.menu-fix-custom .container {
-	/*width: 70% !important;*/
-}
-
-.title-type-lesson {
-	margin: 10px 0 0 0;
-	color: blue;
-}
-
-/*.tab-content {*/
-	/*padding: 0 0 15px 0;*/
-/*}*/
-
 .main.main-page {
 	height: 100%;
 	position: relative;
@@ -161,7 +148,7 @@ header#header .header-top {
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.28);
+	background: rgba(21,43,57,0.8);
 	left: 0;
 	top: 0;
 	z-index: 9998;
@@ -173,7 +160,7 @@ header#header .header-top {
 .overlay-active {
 	visibility: visible;
 	opacity: 1;
-	z-index: 99998;
+	z-index: 9999;
 }
 
 .toolbar-inner {
@@ -218,21 +205,11 @@ div#toolbar-open {
 .center-class.logo-webstite {
     left: calc( 50% - 108px / 2 );
     position: absolute;
-    /*-webkit-transform: translateX(-50%);*/
-    /*-moz-transform: translateX(-50%);*/
-    /*-ms-transform: translateX(-50%);*/
-    /*-o-transform: translateX(-50%);*/
-    /*transform: translateX(-50%);*/
-    /*-webkit-transition: all 0.3s ease-in-out;*/
-    /*-moz-transition: all 0.3s ease-in-out;*/
-    /*-o-transition: all 0.3s ease-in-out;*/
-    /*transition: all 0.3s ease-in-out;*/
 }
 
-/*.menu-fix-custom {*/
-    /*background: red;*/
-    /*margin-bottom: 30px;*/
-/*}*/
+.center-class {
+	text-align: center;
+}
 
 ul.primary-header-custom li.nav-item:before {
 	content: ' ';
@@ -437,7 +414,7 @@ ul.primary-header-custom li.nav-item:before {
 .img-thumbnail-middle {
 	width: 100%;
 	height: 250px;
-	padding: 5px;
+	padding: 5px 10px;
 	text-align: center;
 	/*border-bottom: 1px solid #eee;*/
 	display: flex;
@@ -877,7 +854,7 @@ footer.navbar-fixed-bottom {
 }
 
 #myTabReading {
-	height: 65px;
+	height: 50px;
 	background: white;
 	font-weight: 600;
 	color: #222;
@@ -923,8 +900,6 @@ footer.navbar-fixed-bottom {
 }
 
 .logo-reading-menu {
-	display: none;
-	margin-right: 50px;
 	width: auto;
 	height: 100%;
 }
@@ -962,7 +937,6 @@ footer.navbar-fixed-bottom {
 #readingSubmitQuizModal .modal-body {
 	text-align: center;
 }
-
 
 /**
 Action Center User
@@ -1352,7 +1326,7 @@ Action Center User
 	display: none;
 	background: #fff url("/public/imgs/original/loader.gif") no-repeat center center;
 	opacity: 0.9;
-	z-index: 12345;
+	z-index: 999999;
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -1387,12 +1361,14 @@ h2.title-post {
 	display: block;
 }
 
-.title-lesson-header {
-	display: none;
-}
-
 .reading-header-fixed .title-lesson-header {
 	display: block;
+}
+
+header#header-client-reading {
+	height: 50px;
+	background-color: #152B39;
+	color: #fff;
 }
 
 .container.introduction-container {
@@ -1403,6 +1379,10 @@ h2.title-post {
 
 .breadcrumb-header .breadcrumb a:focus, a:hover {
 	color: #5cb85c;
+}
+
+.menu.menu-reading.row {
+	margin: 0;
 }
 
 .cke_button__checkbox_quiz_label {
@@ -1460,10 +1440,3 @@ h2.title-post {
 	color: #cccc;
 }
 
-.sub-level-one li {
-	padding-left: 20px !important;
-}
-
-.sub-level-two li {
-	padding-left: 40px !important;
-}
