--- a/public/css/admin/admin-style.css
+++ b/public/css/admin/admin-style.css
@@ -10,7 +10,7 @@
     width: 95%;
 }
 
-.list-ordered li {
+.list-ordered li, .list-ordered-paragraph li {
     list-style: none;
     display: inline;
     margin: 0px 10px;
