--- a/public/css/client/readingSolution.css
+++ b/public/css/client/readingSolution.css
@@ -337,9 +337,7 @@ span.keywords-area-title {
 }
 
 .btn-show-answer {
-    padding: 7px;
     font-size: 16px;
-    bottom: 2px;
     position: relative;
 }
 
@@ -449,4 +447,8 @@ input.reply-sub-cmt {
 .close-explanation {
     font-size: 25px;
     cursor: pointer;
+}
+
+.explain-show {
+    display: inline;
 }
